Fix spacing in aside catalog filter

--- a/src/styles/layouts/_catalog-page.scss
+++ b/src/styles/layouts/_catalog-page.scss
@@ -25,3 +25,9 @@
     color: #0265DC;
 }
 }
+
+.catalog__grid-button {
+    display: flex;
+    justify-content: center;
+    margin-top: 48px;
+}
